# APP_military-Mobility-Platform_miliVision

./: README.md
APP(BE)/web-server/: .Dockerfile.swp  Dockerfile  pyproject.toml
APP(BE)/web-server/backend/: db.sqlite3
APP(BE)/web-server/backend/backend/: asgi.py  routing.py  settings.py  urls.py
APP(BE)/web-server/backend/db_schema/: apps.py  models.py
APP(BE)/web-server/backend/incident/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
APP(BE)/web-server/backend/incident/migrations/: 0001_initial.py  0002_initial.py  0002_rescue.py
APP(BE)/web-server/backend/login/: admin.py  models.py  serializers.py  urls.py  views.py
APP(BE)/web-server/backend/login/migrations/: 0001_initial.py  0002_user_is_staff.py  0003_alter_user_is_superuser.py  0004_user_permission.py
APP(BE)/web-server/backend/mileage/: .views.py.swp  admin.py  models.py  serializers.py  urls.py  utils.py  views.py
APP(BE)/web-server/backend/mileage/migrations/: 0001_initial.py
APP(BE)/web-server/backend/tms/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
APP(BE)/web-server/backend/tms/migrations/: 0001_initial.py  0002_car_license_plate.py  0002_notification_message_reservation_and_more.py  0003_rename_vehicle_car_remove_notification_user_revoker_and_more.py  0004_rename_name_car_car_model_car_color_and_more.py  0005_notification_battalion_receiver_and_more.py  0006_car_can_ride.py  0007_alter_reservation_is_approved.py  0008_rename_is_approved_reservation_status_and_more.py  0011_reservation_driving_by_self.py  (+4 more)
(+279 files in other folders)
